# backup-1

./: README.md
bash/: bash_aliases  bash_env  bash_functions  bashrc  copy.sh  diff.sh  dir_colors
git/: apply.sh  gitconfig  ignore  netrc
hosts/: 1.list  apple.txt  create_host.py  create_host.sh  delegated-apnic-latest  dnsmasq.conf  domain.list  get_host.sh  hosts  hosts.all  hosts.bak  socks5_serv.py
pf/: pf.sh
vim/: apply.sh  bundle.list  update.sh  vimrc
vim/bundle/cscope.vim/plugin/: cscope_maps.vim
vim/bundle/fine_blue/: fine_blue.vim
vim/bundle/jeffy-plugins/plugin/: project.vim
vim/bundle/tomorrow/colors/: developer.vim  evening256.vim  google.vim
vim/git_save/CRefVim/plugin/: crefvim.vim
vim/git_save/bash-support.vim/bash-support/templates/: Templates  comments.templates
vim/git_save/c.vim/c-support/templates/: Templates  c.comments.template  c.idioms.template  c.preprocessor.template  c.statements.template
vim/git_save/c.vim/ftplugin/: c.vim  make.vim
vim/git_save/c.vim/plugin/: c.vim
work/: update_and_install.sh
work/Flora_Pac/: delegated-apnic-latest  flora_pac  git_tgz  test_build.sh
work/curl/: CMakeLists.txt  CMakeLists_common.txt  Makefile.bak  data_struct.h  multi_test  multi_test.c  util.c  util.h
work/curl/backup/: multi-single.c  multi-single.c.bak  multi.c  multithread.c  multithread.c.bak  simple.c
work/curl/common/: cfg_parse.c  cfg_parse.h  file_op.c  file_op.h  lock_def.h  misc.c  misc.h  setsignal.c  setsignal.h  ssl_lock.c  ssl_lock.h  string_s.c  timestamp.c  timestamp.h  types.h
work/curl/data/: cms.txt  ds_100k.txt  ds_10k.txt  ds_1k.txt  ds_1m.txt  ds_512.txt  dsext_100k.txt  dsext_10k.txt  dsext_1k.txt  dsext_512.txt  ubuntu.txt
work/curl/gprof/: makefile_gprof
work/curl/nginx_etc/: nginx.conf
work/curl/testing/: add_route.sh  add_route_2.sh  add_route_3.sh  check_connection.sh  compare21.sh  icmp_redirect.sh  test.sh  test_all.sh  test_direct.sh  test_gprof.sh  test_latency.sh  test_perf.sh
work/curl_http_pipeline_tester/: Makefile.am  Makefile.in  http_client.c  http_client_ori.c
work/dns-tcp-socks-proxy/: Makefile  dns_proxy.c  dns_proxy.conf  dns_proxy.sh  resolv_new.conf
work/dns-tcp-socks-proxy/adt/: ac_bm.c  ac_bm.h  hash.c  hash.h  hash_index_func.h  pool_list.h
work/dns-tcp-socks-proxy/common/: atomic_def.h  bitops.h  bitstring.h  byte_align.h  cmlib_lock.h  common.h  cplus_define.h  debug.h  get_time.h  ip_parse.h  lock_def.h  lock_file.h  memstr_func.c  misc.c  mutex_lock_def.h  optimize.h  refobj.h  so_handle.c  so_handle.h  str_def.h  str_two_way.h  strcasestr_func.c  string_s.c  string_s.h  thread_lock.h  timestamp.c  timestamp.h  types.h  umemory.h
work/md5/: make.sh  md5.c  md5.h  test.c
work/multidig/: 1.txt  2.txt  check_invalid_dns.sh  curl.sh  fail_dns.txt  find.sh  get_fastest_ip.sh  multi_dns_query.py  multi_ping.py  noresult_dns.txt  osxapps.itunes.apple.com.txt  result.txt  use_dns.txt  valid_dns.txt
work/proxychains-ng/: git_url.txt  proxychains.conf
work/pylot_1.26/: run.py  test.sh
work/pylot_1.26/core/: config.py  engine.py
work/pylot_1.26/ui/console/: pylot_console.py
work/pylot_1.26/xml/: cms.xml  cms_https.xml  ds2_10k.xml  ds2_10k_s.xml  ds2_1k.xml  ds2_1k_s.xml  ds2_512.xml  ds2_512_s.xml  http.xml
work/shadowsocks-nodejs/: config.json  encrypt.js  install.sh  local.js  package.json  server.js
work/sslsplit/: CMakeLists.txt  READ.md  README.md  app_service.c  app_service.h  app_service_interface.h  attrib.h  base64.c  cache.c  cachefkcrt.c  cachetgcrt.c  cert.c  dynbuf.c  log.c  log.h  logger.c  logger.h  main.c  nat.c  opts.c  opts.h  proc.c  proxy.c  pxyconn.c  pxysslshut.c  pxythrmgr.c  ssl.c  start_sslsplit.sh  sys.c  thrqueue.c  url.c
work/sslsplit/test/: git_old
work/tools/libcurl/: aie_patch.sh  curl.patch  make.sh
work/tools/sp_bin/: make.sh  sp_bin.c
work/web_py/: http.py  https.py  index.html  start.sh
work/web_py/static/: socks.list
